--- a/demo/.env
+++ b/demo/.env
@@ -1,6 +1,6 @@
 COMPOSE_PROJECT_NAME=demo
 SYSLOG_LEVEL=8
-DOMAIN=amazonaws.com
-TELE_SRV=ec2-52-87-143-28.compute-1
+DOMAIN=local
+TELE_SRV=cow-web
 SMS_PORT=8080
 WEBSMSD_PORT=80
