--- a/demo/asterisk/pjsip_transport.conf
+++ b/demo/asterisk/pjsip_transport.conf
@@ -9,9 +9,9 @@
 [t_wan](!)
 type = transport
 bind = 0.0.0.0:5060
-domain = amazonaws.com
-external_signaling_address = 52.87.143.28
-external_media_address = 52.87.143.28
+domain = local
+external_signaling_address = ${ENV(DOCKER_HOST_IP)}
+external_media_address = ${ENV(DOCKER_HOST_IP)}
 tos = cs3
 cos = 3
 
