--- a/demo/asterisk/websms.conf
+++ b/demo/asterisk/websms.conf
@@ -6,8 +6,7 @@
 ;
 
 [websms]
-;url_host        = https://api.example.com
-url_host        = http://ec2-52-87-143-28.compute-1.amazonaws.com:8080
+url_host        = https://api.example.com
 url_path        = /sms/send/
 auth_user       = user
 auth_secret     = secret
