--- a/demo/asterisk/pjsip_endpoint.conf
+++ b/demo/asterisk/pjsip_endpoint.conf
@@ -13,7 +13,7 @@ endpoint/set_var = WEBSMS_INDEX=
 ;-------------------------------- sip trunks -----------------------------------
 
 [itsp:sip_trunk_1](w_trunk)
-remote_hosts = 52.87.143.28
+remote_hosts = ${ENV(DOCKER_HOST_IP)}
 sends_auth = yes
 sends_registrations = yes
 outbound_auth/username = username
