Update configuration and add systemd unit file

--- a/demo/asterisk.orig/pjsip_endpoint.conf
+++ b/demo/asterisk.orig/pjsip_endpoint.conf
@@ -13,7 +13,7 @@ endpoint/set_var = WEBSMS_INDEX=
 ;-------------------------------- sip trunks -----------------------------------
 
 [itsp:sip_trunk_1](w_trunk)
-remote_hosts = 192.168.0.15
+remote_hosts = DOCKER_HOST_IP
 sends_auth = yes
 sends_registrations = yes
 outbound_auth/username = username
