--- a/demo/asterisk.orig/pjsip_transport.conf
+++ b/demo/asterisk.orig/pjsip_transport.conf
@@ -10,8 +10,8 @@
 type = transport
 bind = 0.0.0.0:5060
 domain = local
-external_signaling_address = 192.168.0.15
-external_media_address = 192.168.0.15
+external_signaling_address = DOCKER_HOST_IP
+external_media_address = DOCKER_HOST_IP
 tos = cs3
 cos = 3
 
